# paper-implement

./: README.md  pyproject.toml
adam/: README.md  adam.ipynb
attention/: README.md  attn.ipynb  mha.ipynb
authentic/: README.md
bitcoin/: README.md  ledger_signed.ipynb  simple_ledger.ipynb
boltzmann/: README.md  boltzmann_machine.ipynb  full_boltzmann_machine.ipynb
bpe/: README.md  bpe.ipynb
complexo/: README.md  complexodynamics.ipynb
dl_func_org/: README.md
fft/: README.md  dft.ipynb  dft2.ipynb  fft.ipynb
func_vis_rec/: README.md
ks/: README.md  ecdf.ipynb  ks.ipynb
language_network/: README.md  activations.ipynb  constast.ipynb  data.ipynb  forward_hf.ipynb
language_network/data/: angry.csv
nmf/: README.md  actual.ipynb  reg_grad_descent.ipynb  reg_grad_descent_sparse.ipynb
norm/: README.md
obj_vis_attn/: README.md
perceptron/: README.md  mult_layer_perceptron.ipynb  single_perceptron.ipynb
ramachandran/: README.md  torsion.ipynb  torsion_pdb.ipynb
sca/: README.md
universality/: README.md
