[project]
name = "paper-implement"
version = "0.1.0"
description = "Paper Implementations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy<2",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "torch==2.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
